# softshell

./: LICENSE  README.md  index.html  main.css
client/: README.md  index.js  package-lock.json  package.json
client/public/: index.html  main.css
dummy_server/: example.js  index.js  package-lock.json  package.json
server/: .env-sample  .gitignore  Cargo.toml  bad_words.txt  temp.txt
server/src/: bad_words.txt  main.rs  parser.rs  twitter.rs
server/twitter_sim/: example.js  index.js  package-lock.json  package.json
