[package]
name = "softshell"
version = "0.1.0"
authors = ["Drew S. Ortega <DrewSOrtega@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.33"
hyper = "0.12.18"
hyper-tls = "0.3.1"
dotenv = "0.13.0"
dotenv_codegen = "0.11.0"
iron = "0.6.0"
futures = "0.1.17"
tokio = "0.1.13"
tokio-core = "0.1.17"
tokio-io = "0.1.10"